--- a/app/src/main/res/layout/activity_manage_member_admin.xml
+++ b/app/src/main/res/layout/activity_manage_member_admin.xml
@@ -47,7 +47,7 @@
             android:id="@+id/textView4"
             android:layout_width="125dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="Member 1"
             android:textAlignment="center"
@@ -70,21 +70,23 @@
     </TableRow>
 
     <TableRow
+        android:id="@+id/tableRow3"
         android:layout_width="409dp"
         android:layout_height="80dp"
-        android:background="#D1D1D1"
+        android:layout_marginTop="20dp"
+        android:background="@color/listTableS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableRow"
-        app:layout_constraintVertical_bias="0.073" >
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="125dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="Member 2"
             android:textAlignment="center"
@@ -94,6 +96,84 @@
 
         <Button
             android:id="@+id/button8"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="144dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/button_colorS"
+            android:text="@string/delete"
+            android:textAlignment="center"
+            android:textColor="@color/text_color1S"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow4"
+        android:layout_width="409dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/listTableS"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableRow3"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="125dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:text="Member 3"
+            android:textAlignment="center"
+            android:textColor="@color/text_color2S"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="144dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/button_colorS"
+            android:text="@string/delete"
+            android:textAlignment="center"
+            android:textColor="@color/text_color1S"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow5"
+        android:layout_width="409dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/listTableS"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableRow4"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="125dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:text="Member 4"
+            android:textAlignment="center"
+            android:textColor="@color/text_color2S"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button10"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginLeft="144dp"
