--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="text_color1S">#FFFFFF</color>
     <color name="text_color2S">#000000</color>
     <color name="listTableS">#D1D1D1</color>
+    <color name="button_colorGoldS">#D1B42E</color>
+
+
 </resources>
