--- a/app/src/main/res/layout/activity_add_new_member_admin.xml
+++ b/app/src/main/res/layout/activity_add_new_member_admin.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="20dp"
             android:text="@string/add_member"
             android:textAlignment="center"
-            android:textColor="@color/text_color2S"
+            android:textColor="@color/button_colorGoldS"
             android:textSize="@dimen/topic2_sizeS"
             android:textStyle="bold" />
     </LinearLayout>
@@ -44,45 +44,55 @@
             android:id="@+id/editTextTextPersonName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
-            android:hint="   Name"
+            android:hint="Name"
             android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/editTextTextPersonName2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
-            android:hint="   Age"
+            android:hint="Age"
             android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/editTextNumberDecimal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
-            android:hint="   Initial Weight"
+            android:hint="Initial Weight"
             android:inputType="numberDecimal" />
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
-            android:hint="   Email"
+            android:hint="Email"
             android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/editTextTextPersonName3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
-            android:hint="   Package"
+            android:hint="Package"
             android:inputType="textPersonName" />
 
         <Button
