--- a/app/src/main/res/layout/activity_gym_admin.xml
+++ b/app/src/main/res/layout/activity_gym_admin.xml
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content"
             android:text="@string/gymS"
             android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="36sp"
+            android:textColor="@color/button_colorGoldS"
+            android:textSize="50sp"
             android:textStyle="bold" />
     </LinearLayout>
 
