--- a/app/src/main/res/layout/activity_manage_member_admin.xml
+++ b/app/src/main/res/layout/activity_manage_member_admin.xml
@@ -19,13 +19,13 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textView10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/manage_member"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="@color/button_colorGoldS"
             android:textSize="@dimen/topic2_sizeS"
             android:textStyle="bold" />
     </LinearLayout>
@@ -45,14 +45,14 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="125dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="Member 1"
             android:textAlignment="center"
             android:textColor="#000000"
-            android:textSize="24sp"
+            android:textSize="@dimen/mamberNameTextSizeS"
             android:textStyle="bold" />
 
         <Button
@@ -84,14 +84,14 @@
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="125dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="Member 2"
             android:textAlignment="center"
             android:textColor="#000000"
-            android:textSize="24sp"
+            android:textSize="@dimen/mamberNameTextSizeS"
             android:textStyle="bold" />
 
         <Button
@@ -123,14 +123,14 @@
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="125dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="Member 3"
             android:textAlignment="center"
             android:textColor="@color/text_color2S"
-            android:textSize="24sp"
+            android:textSize="@dimen/mamberNameTextSizeS"
             android:textStyle="bold" />
 
         <Button
@@ -162,14 +162,14 @@
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="125dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="Member 4"
             android:textAlignment="center"
             android:textColor="@color/text_color2S"
-            android:textSize="24sp"
+            android:textSize="@dimen/mamberNameTextSizeS"
             android:textStyle="bold" />
 
         <Button
