--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="button_size_1">80dp</dimen>
     <dimen name="topic2_sizeS">30sp</dimen>
     <dimen name="normal_buttonS">65dp</dimen>
+    <dimen name="mamberNameTextSizeS">24sp</dimen>
 </resources>
