seventh commit(changed styles.xml)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/button_colorGoldS</item>
         <item name="colorPrimaryDark">@color/text_color2S</item>
         <item name="colorAccent">@color/button_colorS</item>
     </style>
